--- a/css/formulario.css
+++ b/css/formulario.css
@@ -33,8 +33,8 @@ input {
 }
 
 #formulario {
-  width: 500px;
-  min-height: 400px;
+  width: 400px;
+  min-height: 300px;
   background-color: #fff;
   border-radius: 6px;
   padding: 20px 30px;
@@ -57,3 +57,25 @@ input {
 .colunas .input-group {
   width: 48%;
 }
+
+.rodape {
+    text-align: center;
+}
+
+.botao {
+    background: red;
+    border-radius: 2px;
+    padding: 10px 15px;
+    border: none;
+    color: #fff;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.botao:hover {
+    background: #d4e3f5;
+    border-radius: 8px;
+    color: #000;
+    border: 1px;
+}
+
