--- a/css/formulario.css
+++ b/css/formulario.css
@@ -1,11 +1,16 @@
 body {
-  background: linear-gradient(180deg, #fe8c00 0%, #f83600 100%);
-  background-size: 100%;
+  background: linear-gradient(180deg, #fe8c00 0%, #f83600 100%) fixed;
   margin: 0;
+  padding: 2%;
   height: 100%;
   font-family: Arial, Helvetica, sans-serif;
   font-size: 14px;
 }
+
+.title {
+  margin: 0;
+}
+
 input {
   box-sizing: border-box;
   outline: none;
